guishap.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: declaration ';'
    5          | collection_definition
    6          | function_definition
    7          | assignment ';'
    8          | expression ';'
    9          | if_statement
   10          | loop_statement
   11          | case_statement
   12          | BREAK ';'
   13          | CONTINUE ';'
   14          | RET expression ';'
   15          | block
   16          | ';'

   17 declaration: VAR_DECL
   18            | CONST_DECL
   19            | ARRAY_DECL
   20            | VAR_DECL ASSIGN expression
   21            | CONST_DECL ASSIGN expression
   22            | ARRAY_DECL ASSIGN expression

   23 $@1: /* empty */

   24 collection_definition: COL IDENTIFIER $@1 '{' member_list '}' ';'

   25 member_list: member
   26            | member_list ',' member

   27 member: VAR_DECL
   28       | ARRAY_DECL

   29 $@2: /* empty */

   30 function_definition: SHAP IDENTIFIER $@2 '(' parameter_list ')' '>' type block

   31 parameter_list: /* empty */
   32               | parameter
   33               | parameter_list ',' parameter

   34 parameter: VAR_DECL
   35          | ARRAY_DECL
   36          | CONST_DECL ASSIGN expression

   37 $@3: /* empty */

   38 block: '{' $@3 statement_list '}'
   39      | '{' '}'

   40 assignment: IDENTIFIER ASSIGN expression
   41           | IDENTIFIER '[' expression ']' ASSIGN expression
   42           | IDENTIFIER '.' IDENTIFIER ASSIGN expression

   43 $@4: /* empty */

   44 if_statement: IF '[' expression ']' $@4 block

   45 $@5: /* empty */

   46 if_statement: if_statement ELIF '[' expression ']' $@5 block

   47 $@6: /* empty */

   48 if_statement: if_statement ELSE $@6 block

   49 $@7: /* empty */

   50 loop_statement: LOOP_TILL '[' expression ']' $@7 block

   51 $@8: /* empty */

   52 loop_statement: LOOP VAR_DECL FOR range_expression $@8 block

   53 range_expression: '[' expression RANGE expression ']'
   54                 | '[' expression RANGE expression RANGE expression ']'

   55 case_statement: CASE '[' expression ']' '{' case_list '}'

   56 case_list: case_item
   57          | case_list case_item

   58 $@9: /* empty */

   59 case_item: '[' expression ']' ':' $@9 statement

   60 $@10: /* empty */

   61 case_item: '[' ']' ':' $@10 statement

   62 expression: INTEGER
   63           | FLOAT
   64           | STRING
   65           | IDENTIFIER
   66           | IDENTIFIER '[' expression ']'
   67           | IDENTIFIER '.' IDENTIFIER
   68           | IDENTIFIER '(' argument_list ')'
   69           | '(' expression ')'
   70           | expression '+' expression
   71           | expression '-' expression
   72           | expression '*' expression
   73           | expression '/' expression
   74           | expression '%' expression
   75           | expression '&' expression
   76           | expression '|' expression
   77           | expression '^' expression
   78           | '~' expression
   79           | expression EQ expression
   80           | expression LT expression
   81           | expression GT expression
   82           | expression LE expression
   83           | expression GE expression
   84           | expression AND expression
   85           | expression OR expression
   86           | NOT expression
   87           | '-' expression

   88 argument_list: /* empty */
   89              | expression
   90              | argument_list ',' expression

   91 type: TYPE_VOID
   92     | TYPE_INT
   93     | TYPE_FLOAT
   94     | TYPE_STRING
   95     | TYPE_BOOL
   96     | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 74
'&' (38) 75
'(' (40) 30 68 69
')' (41) 30 68 69
'*' (42) 72
'+' (43) 70
',' (44) 26 33 90
'-' (45) 71 87
'.' (46) 42 67
'/' (47) 73
':' (58) 59 61
';' (59) 4 7 8 12 13 14 16 24
'>' (62) 30
'[' (91) 41 44 46 50 53 54 55 59 61 66
']' (93) 41 44 46 50 53 54 55 59 61 66
'^' (94) 77
'{' (123) 24 38 39 55
'|' (124) 76
'}' (125) 24 38 39 55
'~' (126) 78
error (256)
IDENTIFIER (258) 24 30 40 41 42 65 66 67 68 96
STRING (259) 64
INTEGER (260) 62
FLOAT (261) 63
COL (262) 24
SHAP (263) 30
RET (264) 14
LOOP_TILL (265) 50
LOOP (266) 52
FOR (267) 52
BREAK (268) 12
CONTINUE (269) 13
IF (270) 44
ELIF (271) 46
ELSE (272) 48
CASE (273) 55
TYPE_VOID (274) 91
TYPE_INT (275) 92
TYPE_FLOAT (276) 93
TYPE_STRING (277) 94
TYPE_BOOL (278) 95
VAR_DECL (279) 17 20 27 34 52
CONST_DECL (280) 18 21 36
ARRAY_DECL (281) 19 22 28 35
ASSIGN (282) 20 21 22 36 40 41 42
RANGE (283) 53 54
EQ (284) 79
LT (285) 80
GT (286) 81
LE (287) 82
GE (288) 83
AND (289) 84
OR (290) 85
NOT (291) 86
UMINUS (292)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
statement_list (60)
    on left: 2 3, on right: 1 3 38
statement (61)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 2 3 59 61
declaration (62)
    on left: 17 18 19 20 21 22, on right: 4
collection_definition (63)
    on left: 24, on right: 5
$@1 (64)
    on left: 23, on right: 24
member_list (65)
    on left: 25 26, on right: 24 26
member (66)
    on left: 27 28, on right: 25 26
function_definition (67)
    on left: 30, on right: 6
$@2 (68)
    on left: 29, on right: 30
parameter_list (69)
    on left: 31 32 33, on right: 30 33
parameter (70)
    on left: 34 35 36, on right: 32 33
block (71)
    on left: 38 39, on right: 15 30 44 46 48 50 52
$@3 (72)
    on left: 37, on right: 38
assignment (73)
    on left: 40 41 42, on right: 7
if_statement (74)
    on left: 44 46 48, on right: 9 46 48
$@4 (75)
    on left: 43, on right: 44
$@5 (76)
    on left: 45, on right: 46
$@6 (77)
    on left: 47, on right: 48
loop_statement (78)
    on left: 50 52, on right: 10
$@7 (79)
    on left: 49, on right: 50
$@8 (80)
    on left: 51, on right: 52
range_expression (81)
    on left: 53 54, on right: 52
case_statement (82)
    on left: 55, on right: 11
case_list (83)
    on left: 56 57, on right: 55 57
case_item (84)
    on left: 59 61, on right: 56 57
$@9 (85)
    on left: 58, on right: 59
$@10 (86)
    on left: 60, on right: 61
expression (87)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86 87, on right: 8 14 20 21 22 36 40 41 42 44
    46 50 53 54 55 59 66 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 89 90
argument_list (88)
    on left: 88 89 90, on right: 68 90
type (89)
    on left: 91 92 93 94 95 96, on right: 30


state 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    COL         shift, and go to state 5
    SHAP        shift, and go to state 6
    RET         shift, and go to state 7
    LOOP_TILL   shift, and go to state 8
    LOOP        shift, and go to state 9
    BREAK       shift, and go to state 10
    CONTINUE    shift, and go to state 11
    IF          shift, and go to state 12
    CASE        shift, and go to state 13
    VAR_DECL    shift, and go to state 14
    CONST_DECL  shift, and go to state 15
    ARRAY_DECL  shift, and go to state 16
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    ';'         shift, and go to state 20
    '{'         shift, and go to state 21
    '('         shift, and go to state 22

    program                go to state 23
    statement_list         go to state 24
    statement              go to state 25
    declaration            go to state 26
    collection_definition  go to state 27
    function_definition    go to state 28
    block                  go to state 29
    assignment             go to state 30
    if_statement           go to state 31
    loop_statement         go to state 32
    case_statement         go to state 33
    expression             go to state 34


state 1

   40 assignment: IDENTIFIER . ASSIGN expression
   41           | IDENTIFIER . '[' expression ']' ASSIGN expression
   42           | IDENTIFIER . '.' IDENTIFIER ASSIGN expression
   65 expression: IDENTIFIER .
   66           | IDENTIFIER . '[' expression ']'
   67           | IDENTIFIER . '.' IDENTIFIER
   68           | IDENTIFIER . '(' argument_list ')'

    ASSIGN  shift, and go to state 35
    '('     shift, and go to state 36
    '['     shift, and go to state 37
    '.'     shift, and go to state 38

    $default  reduce using rule 65 (expression)


state 2

   64 expression: STRING .

    $default  reduce using rule 64 (expression)


state 3

   62 expression: INTEGER .

    $default  reduce using rule 62 (expression)


state 4

   63 expression: FLOAT .

    $default  reduce using rule 63 (expression)


state 5

   24 collection_definition: COL . IDENTIFIER $@1 '{' member_list '}' ';'

    IDENTIFIER  shift, and go to state 39


state 6

   30 function_definition: SHAP . IDENTIFIER $@2 '(' parameter_list ')' '>' type block

    IDENTIFIER  shift, and go to state 40


state 7

   14 statement: RET . expression ';'

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 42


state 8

   50 loop_statement: LOOP_TILL . '[' expression ']' $@7 block

    '['  shift, and go to state 43


state 9

   52 loop_statement: LOOP . VAR_DECL FOR range_expression $@8 block

    VAR_DECL  shift, and go to state 44


state 10

   12 statement: BREAK . ';'

    ';'  shift, and go to state 45


state 11

   13 statement: CONTINUE . ';'

    ';'  shift, and go to state 46


state 12

   44 if_statement: IF . '[' expression ']' $@4 block

    '['  shift, and go to state 47


state 13

   55 case_statement: CASE . '[' expression ']' '{' case_list '}'

    '['  shift, and go to state 48


state 14

   17 declaration: VAR_DECL .
   20            | VAR_DECL . ASSIGN expression

    ASSIGN  shift, and go to state 49

    $default  reduce using rule 17 (declaration)


state 15

   18 declaration: CONST_DECL .
   21            | CONST_DECL . ASSIGN expression

    ASSIGN  shift, and go to state 50

    $default  reduce using rule 18 (declaration)


state 16

   19 declaration: ARRAY_DECL .
   22            | ARRAY_DECL . ASSIGN expression

    ASSIGN  shift, and go to state 51

    $default  reduce using rule 19 (declaration)


state 17

   86 expression: NOT . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 52


state 18

   87 expression: '-' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 53


state 19

   78 expression: '~' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 54


state 20

   16 statement: ';' .

    $default  reduce using rule 16 (statement)


state 21

   38 block: '{' . $@3 statement_list '}'
   39      | '{' . '}'

    '}'  shift, and go to state 55

    $default  reduce using rule 37 ($@3)

    $@3  go to state 56


state 22

   69 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 57


state 23

    0 $accept: program . $end

    $end  shift, and go to state 58


state 24

    1 program: statement_list .
    3 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    COL         shift, and go to state 5
    SHAP        shift, and go to state 6
    RET         shift, and go to state 7
    LOOP_TILL   shift, and go to state 8
    LOOP        shift, and go to state 9
    BREAK       shift, and go to state 10
    CONTINUE    shift, and go to state 11
    IF          shift, and go to state 12
    CASE        shift, and go to state 13
    VAR_DECL    shift, and go to state 14
    CONST_DECL  shift, and go to state 15
    ARRAY_DECL  shift, and go to state 16
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    ';'         shift, and go to state 20
    '{'         shift, and go to state 21
    '('         shift, and go to state 22

    $default  reduce using rule 1 (program)

    statement              go to state 59
    declaration            go to state 26
    collection_definition  go to state 27
    function_definition    go to state 28
    block                  go to state 29
    assignment             go to state 30
    if_statement           go to state 31
    loop_statement         go to state 32
    case_statement         go to state 33
    expression             go to state 34


state 25

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 26

    4 statement: declaration . ';'

    ';'  shift, and go to state 60


state 27

    5 statement: collection_definition .

    $default  reduce using rule 5 (statement)


state 28

    6 statement: function_definition .

    $default  reduce using rule 6 (statement)


state 29

   15 statement: block .

    $default  reduce using rule 15 (statement)


state 30

    7 statement: assignment . ';'

    ';'  shift, and go to state 61


state 31

    9 statement: if_statement .
   46 if_statement: if_statement . ELIF '[' expression ']' $@5 block
   48             | if_statement . ELSE $@6 block

    ELIF  shift, and go to state 62
    ELSE  shift, and go to state 63

    $default  reduce using rule 9 (statement)


state 32

   10 statement: loop_statement .

    $default  reduce using rule 10 (statement)


state 33

   11 statement: case_statement .

    $default  reduce using rule 11 (statement)


state 34

    8 statement: expression . ';'
   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression

    EQ   shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    AND  shift, and go to state 69
    OR   shift, and go to state 70
    '|'  shift, and go to state 71
    '^'  shift, and go to state 72
    '&'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ';'  shift, and go to state 79


state 35

   40 assignment: IDENTIFIER ASSIGN . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 80


state 36

   68 expression: IDENTIFIER '(' . argument_list ')'

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    $default  reduce using rule 88 (argument_list)

    expression     go to state 81
    argument_list  go to state 82


state 37

   41 assignment: IDENTIFIER '[' . expression ']' ASSIGN expression
   66 expression: IDENTIFIER '[' . expression ']'

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 83


state 38

   42 assignment: IDENTIFIER '.' . IDENTIFIER ASSIGN expression
   67 expression: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 84


state 39

   24 collection_definition: COL IDENTIFIER . $@1 '{' member_list '}' ';'

    $default  reduce using rule 23 ($@1)

    $@1  go to state 85


state 40

   30 function_definition: SHAP IDENTIFIER . $@2 '(' parameter_list ')' '>' type block

    $default  reduce using rule 29 ($@2)

    $@2  go to state 86


state 41

   65 expression: IDENTIFIER .
   66           | IDENTIFIER . '[' expression ']'
   67           | IDENTIFIER . '.' IDENTIFIER
   68           | IDENTIFIER . '(' argument_list ')'

    '('  shift, and go to state 36
    '['  shift, and go to state 87
    '.'  shift, and go to state 88

    $default  reduce using rule 65 (expression)


state 42

   14 statement: RET expression . ';'
   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression

    EQ   shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    AND  shift, and go to state 69
    OR   shift, and go to state 70
    '|'  shift, and go to state 71
    '^'  shift, and go to state 72
    '&'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ';'  shift, and go to state 89


state 43

   50 loop_statement: LOOP_TILL '[' . expression ']' $@7 block

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 90


state 44

   52 loop_statement: LOOP VAR_DECL . FOR range_expression $@8 block

    FOR  shift, and go to state 91


state 45

   12 statement: BREAK ';' .

    $default  reduce using rule 12 (statement)


state 46

   13 statement: CONTINUE ';' .

    $default  reduce using rule 13 (statement)


state 47

   44 if_statement: IF '[' . expression ']' $@4 block

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 92


state 48

   55 case_statement: CASE '[' . expression ']' '{' case_list '}'

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 93


state 49

   20 declaration: VAR_DECL ASSIGN . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 94


state 50

   21 declaration: CONST_DECL ASSIGN . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 95


state 51

   22 declaration: ARRAY_DECL ASSIGN . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 96


state 52

   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression
   86           | NOT expression .

    $default  reduce using rule 86 (expression)


state 53

   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression
   87           | '-' expression .

    $default  reduce using rule 87 (expression)


state 54

   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   78           | '~' expression .
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression

    $default  reduce using rule 78 (expression)


state 55

   39 block: '{' '}' .

    $default  reduce using rule 39 (block)


state 56

   38 block: '{' $@3 . statement_list '}'

    IDENTIFIER  shift, and go to state 1
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    COL         shift, and go to state 5
    SHAP        shift, and go to state 6
    RET         shift, and go to state 7
    LOOP_TILL   shift, and go to state 8
    LOOP        shift, and go to state 9
    BREAK       shift, and go to state 10
    CONTINUE    shift, and go to state 11
    IF          shift, and go to state 12
    CASE        shift, and go to state 13
    VAR_DECL    shift, and go to state 14
    CONST_DECL  shift, and go to state 15
    ARRAY_DECL  shift, and go to state 16
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    ';'         shift, and go to state 20
    '{'         shift, and go to state 21
    '('         shift, and go to state 22

    statement_list         go to state 97
    statement              go to state 25
    declaration            go to state 26
    collection_definition  go to state 27
    function_definition    go to state 28
    block                  go to state 29
    assignment             go to state 30
    if_statement           go to state 31
    loop_statement         go to state 32
    case_statement         go to state 33
    expression             go to state 34


state 57

   69 expression: '(' expression . ')'
   70           | expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression

    EQ   shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    AND  shift, and go to state 69
    OR   shift, and go to state 70
    '|'  shift, and go to state 71
    '^'  shift, and go to state 72
    '&'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ')'  shift, and go to state 98


state 58

    0 $accept: program $end .

    $default  accept


state 59

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 60

    4 statement: declaration ';' .

    $default  reduce using rule 4 (statement)


state 61

    7 statement: assignment ';' .

    $default  reduce using rule 7 (statement)


state 62

   46 if_statement: if_statement ELIF . '[' expression ']' $@5 block

    '['  shift, and go to state 99


state 63

   48 if_statement: if_statement ELSE . $@6 block

    $default  reduce using rule 47 ($@6)

    $@6  go to state 100


state 64

   79 expression: expression EQ . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 101


state 65

   80 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 102


state 66

   81 expression: expression GT . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 103


state 67

   82 expression: expression LE . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 104


state 68

   83 expression: expression GE . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 105


state 69

   84 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 106


state 70

   85 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 107


state 71

   76 expression: expression '|' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 108


state 72

   77 expression: expression '^' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 109


state 73

   75 expression: expression '&' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 110


state 74

   70 expression: expression '+' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 111


state 75

   71 expression: expression '-' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 112


state 76

   72 expression: expression '*' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 113


state 77

   73 expression: expression '/' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 114


state 78

   74 expression: expression '%' . expression

    IDENTIFIER  shift, and go to state 41
    STRING      shift, and go to state 2
    INTEGER     shift, and go to state 3
    FLOAT       shift, and go to state 4
    NOT         shift, and go to state 17
    '-'         shift, and go to state 18
    '~'         shift, and go to state 19
    '('         shift, and go to state 22

    expression  go to state 115


state 79

    8 statement: expression ';' .

    $default  reduce using rule 8 (statement)


state 80

   40 assignment: IDENTIFIER ASSIGN expression .
   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression

    EQ   shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    AND  shift, and go to state 69
    OR   shift, and go to state 70
    '|'  shift, and go to state 71
    '^'  shift, and go to state 72
    '&'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78

    $default  reduce using rule 40 (assignment)


state 81

   70 expression: expression . '+' expression
   71           | expression . '-' expression
   72           | expression . '*' expression
   73           | expression . '/' expression
   74           | expression . '%' expression
   75           | expression . '&' expression
   76           | expression . '|' expression
   77           | expression . '^' expression
   79           | expression . EQ expression
   80           | expression . LT expression
   81           | expression . GT expression
   82           | expression . LE expression
   83           | expression . GE expression
   84           | expression . AND expression
   85           | expression . OR expression
   89 argument_list: expression .

    EQ   shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    AND  shift, and go to state 69
    OR   shift, and go to state 70
    '|'  shift, and go to state 71
    '^'  shift, and go to state 72
    '&'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78

    $default  reduce using rule 89 (argument_list)


state 82

   68 expression: IDENTIFIER '(' argument_list . ')'
   90 argument_list: argument_list . ',' expression

    ','  shift, and go to state 116
    ')'  shift, and go to state 117


state 83
